--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>Universidad Iberoamericana</h1>
+<img src="https://www.eleconomista.com.mx/__export/1662584819625/sites/eleconomista/img/2022/09/07/ibero-universidad-campus-cdmx-cortesia.png_1758632412.png" width="400px" height="auto">	
 <p>
 	La Universidad Iberoamericana, conocida como la IBERO es una universidad privada que cuenta con dos campus en México, uno en la CDMX y otro en Tijuana. Compartiendo el nombre, ambas son instituciones autónomas entre sí. <br \> 
 
@@ -26,15 +27,12 @@
 	La IBERO cuenta con varias instalaciones que la hacen mas completa, en estas se puede encontrar: capilla, Biblioteca Francisco Xavier Clavigero, auditorios, estación de Ibero 90.9, Laboratorios, Laboratorios de Cómputo, Laboratorios de Física, Laboratorios de Química, Laboratorio de Telecomunicaciones, Laboratorios de Comunicación, Laboratorio de Ingeniería Civil, Talleres, talleres CAD, Taller de Diseño, Talleres de Diseño Textil, Talleres de Diseño Industrial, Observatorio Astronómico Clavius, Restaurantes y Cafeterías,Gimnasio, Canchas de fútbol soccer, básquetbol, voleibol, béisbol y tenis
 
 </p>
-	<i>cursiva</i>
-</p>
-
-<p>Este es un texto en <b>negrillas</b></p>
+	
 
 
-<h3>Enlaces</h3>
+<h3>Sitio oficial de la IBERO</h3>
  
-<a href="https://www.google.com/"target="_blank"_>Click aqui</a>"
+<a href="https://ibero.mx/"_blank"_>Click aqui</a>"
 <img src="" width="400px" height="auto">
 
 
